@@ -8,12 +8,19 @@
 		body {
 			background-color: white;
 		}
-		
-		/* Format the barcode number box */
-    form {
-      text-align: center;
+    
+    /* Format the barcode representation SVG */
+    .bit-unset {
+      fill: #000000;
+      fill-opacity: 0;
     }
     
+    .bit-set {
+      fill: #000000;
+      fill-opacity: 255;
+    }
+		
+		/* Format the barcode number box */
 		#barcode-value {
 			font-size: x-large;
 			width: 7ch;
@@ -185,7 +192,7 @@
                  x="160.36565"
                  y="184.2372" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-0"
                  width="21.259842"
                  height="21.259842"
@@ -193,7 +200,7 @@
                  y="99.197823"
                  inkscape:label="barcode-0" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-1"
                  width="21.259842"
                  height="21.259842"
@@ -201,7 +208,7 @@
                  y="99.197823"
                  inkscape:label="barcode-1" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-2"
                  width="21.259842"
                  height="21.259842"
@@ -209,7 +216,7 @@
                  y="120.45766"
                  inkscape:label="barcode-2" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-3"
                  width="21.259842"
                  height="21.259842"
@@ -217,7 +224,7 @@
                  y="120.45766"
                  inkscape:label="barcode-3" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-4"
                  width="21.259842"
                  height="21.259842"
@@ -225,7 +232,7 @@
                  y="120.45766"
                  inkscape:label="barcode-4" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-5"
                  width="21.259842"
                  height="21.259842"
@@ -233,7 +240,7 @@
                  y="141.71751"
                  inkscape:label="barcode-5" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-6"
                  width="21.259842"
                  height="21.259842"
@@ -241,7 +248,7 @@
                  y="141.71751"
                  inkscape:label="barcode-6" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-7"
                  width="21.259842"
                  height="21.259842"
@@ -249,7 +256,7 @@
                  y="162.97736"
                  inkscape:label="barcode-7" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-8"
                  width="21.259842"
                  height="21.259842"
@@ -257,7 +264,7 @@
                  y="162.97736"
                  inkscape:label="barcode-8" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-9"
                  width="21.259842"
                  height="21.259842"
@@ -265,7 +272,7 @@
                  y="162.97736"
                  inkscape:label="barcode-9" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-10"
                  width="21.259842"
                  height="21.259842"
@@ -273,7 +280,7 @@
                  y="184.2372"
                  inkscape:label="barcode-10" />
               <rect
-                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill:#000000;fill-opacity:0;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
+                 style="color:#000000;display:inline;overflow:visible;visibility:visible;opacity:1;fill-rule:nonzero;stroke:none;stroke-width:1.77165353;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;marker:none;enable-background:accumulate"
                  id="barcode-11"
                  width="21.259842"
                  height="21.259842"
@@ -311,13 +318,19 @@
       function getBit(bit) {
 
         var box = document.getElementById("barcode-" + bit);
-        var opacity = box.style["fill-opacity"];
+        
+        // The box class should be either bit-unset or bit-set...   
+        var boxclass = box.getAttribute("class");
+        
+        //var opacity = box.style["fill-opacity"];
         var val;
-
-        if (opacity == "0") {
+        if (boxclass == "bit-unset") {
           val = 0;
-        } else if (opacity == "255") {
+        } else if (boxclass == "bit-set") {
           val = 1;
+        } else {
+          // No need to get too descriptive here...
+          throw "Unknown class."
         }
 
         return val;
@@ -330,9 +343,12 @@
         var box = document.getElementById("barcode-" + bit);
 
         if (val == 0) {
-          box.style["fill-opacity"] = "0";
+          // setAttribute is better than className for SVG elements...
+          box.setAttribute("class", "bit-unset");
+          //box.style["fill-opacity"] = "0";
         } else if (val == 1) {
-          box.style["fill-opacity"] = "255";
+          box.setAttribute("class", "bit-set");
+          //box.style["fill-opacity"] = "255";
         } else {
           throw "'val' must be 0 or 1."
         }
@@ -398,12 +414,15 @@
       // Toggle the bit state of a barcode box
       function toggleBox() {
 
-        // First, toggle the state
-        var state = this.style["fill-opacity"];
-        if (state == "0") {
-          this.style["fill-opacity"] = "255";
-        } else if (state == "255") {
-          this.style["fill-opacity"] = "0";
+        // First, toggle the state of the box.
+        // Note that getting the bit number isn't trivial here...
+        // It's easier just to change the class attribute directly:
+        var boxclass = this.getAttribute("class");
+        
+        if (boxclass == "bit-unset") {
+          this.setAttribute("class", "bit-set");
+        } else if (boxclass == "bit-set") {
+          this.setAttribute("class", "bit-unset");
         }
 
         // Now, update the barcode value
